Fixed social links layout issue

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -2587,8 +2587,7 @@ pre {
 
 .social-links {
   position: fixed;
-  // top: 55%;
-  bottom: -438px;
+  bottom: -463px;
   left: 10%;
   z-index: 9999;
   transform: none;
